<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/nav_graph"
            app:startDestination="@id/home2">

    <fragment
            android:id="@+id/home2"
            android:name="com.example.android.alcphase1.home.Home"
            android:label="@string/title_home"
            tools:layout="@layout/home_fragment">
        <action
                android:id="@+id/action_home2_to_profile"
                app:destination="@id/profile"/>
        <action
                android:id="@+id/action_home2_to_about"
                app:destination="@id/about"/>
    </fragment>
    <fragment
            android:id="@+id/about"
            android:name="com.example.android.alcphase1.about.About"
            android:label="@string/about_title"
            tools:layout="@layout/about_fragment"/>
    <fragment
            android:id="@+id/profile"
            android:name="com.example.android.alcphase1.profile.Profile"
            android:label="@string/profile_title"
            tools:layout="@layout/profile_fragment"/>
</navigation>