<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".profile.Profile">
        <View
                android:layout_width="0dp"
                android:layout_height="1dp" android:id="@+id/view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@android:color/black"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                android:layout_marginEnd="16dp" android:layout_marginTop="8dp"/>

        <de.hdodenhof.circleimageview.CircleImageView
                android:src="@drawable/tobi_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/imageView"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toTopOf="parent"/>
        <TextView
                android:text="@string/profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView" android:textSize="24sp"/>
        <TextView
                android:text="@string/track"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/view" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:layout_marginTop="16dp" android:textSize="18sp"/>
        <TextView
                android:text="@string/country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:textSize="18sp" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textView3"/>
        <TextView
                android:text="@string/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:textSize="18sp"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView4"/>
        <TextView
                android:text="@string/phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:textSize="18sp"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView5"/>
        <TextView
                android:text="@string/slack_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:textSize="18sp"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView6"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>