<?xml version="1.0" encoding="utf-8"?>

<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
                name="viewModel"
                type="com.example.android.alcphase1.home.HomeViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".home.Home">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_to_alc_label"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:id="@+id/textView"/>
        <Button
                android:text="@string/btn_about_alc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:id="@+id/button"
                android:onClick="@{()->viewModel.navigateToAbout()}"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/textView"/>
        <Button
                android:text="@string/btn_my_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button2"
                android:textColor="@android:color/black"
                android:layout_marginTop="32dp"
                android:onClick="@{()->viewModel.navigateToProfile()}"
                app:layout_constraintTop_toBottomOf="@+id/button"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.498"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>